# swagger/videogames-server/src/main/java/ch/heigvd/videogames/entities/VideogameEntity.java
@@ -1,5 +1,7 @@
 package ch.heigvd.videogames.entities;
 
+import ch.heigvd.videogames.api.VideogamesApi;
+
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
@@ -14,15 +16,29 @@ public class VideogameEntity implements Serializable {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private long id;
+    private int id;
 
     private String kind;
     private String name;
     private String supportedOn;
 
-    public long getId() {
+    public VideogameEntity(int id, String kind, String name, String supportedOn){
+        this.id = id;
+        this.kind = kind;
+        this.name= name;
+        this.supportedOn = supportedOn;
+    }
+
+    public VideogameEntity(){}
+
+    public int getId() {
         return id;
     }
+
+    public void setId(int id){
+        this.id = id;
+    }
+
 
     public String getKind() {
         return kind;
