# swagger/videogames-server/src/main/java/ch/heigvd/videogames/repositories/PurchaseRepository.java
@@ -1,0 +1,11 @@
+package ch.heigvd.videogames.repositories;
+
+import ch.heigvd.videogames.entities.PurchaseEntity;
+import org.springframework.data.jpa.repository.Query;
+import org.springframework.data.repository.CrudRepository;
+import org.springframework.data.repository.query.Param;
+import org.springframework.stereotype.Repository;
+
+@Repository
+public interface PurchaseRepository extends CrudRepository<PurchaseEntity,Integer> {
+}
